// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force Function | Null 1`] = `
{
  "error": {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Null 2`] = `
{
  "error": {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Null 3`] = `
{
  "error": {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Null 4`] = `
{
  "error": {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Null 5`] = `
{
  "error": {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Undefined 1`] = `
{
  "error": {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Undefined 2`] = `
{
  "error": {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Undefined 3`] = `
{
  "error": {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Undefined 4`] = `
{
  "error": {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Undefined 5`] = `
{
  "error": {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Array 1`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    null,
    [
      {
        "a": {
          "b": 1,
        },
      },
      {
        "a": {
          "b": 1,
        },
      },
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Array 2`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    null,
    [
      /foo/g,
      /foo/g,
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Null 1`] = `
{
  "error": {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": [
    null,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Undefined 1`] = `
{
  "error": {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": [
    null,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Array 1`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    undefined,
    [
      {
        "a": {
          "b": 1,
        },
      },
      {
        "a": {
          "b": 1,
        },
      },
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Array 2`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    undefined,
    [
      /foo/g,
      /foo/g,
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Null 1`] = `
{
  "error": {
    "message": "null is not a list",
    "type": "Error",
  },
  "inputs": [
    undefined,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Undefined 1`] = `
{
  "error": {
    "message": "undefined is not a list",
    "type": "Error",
  },
  "inputs": [
    undefined,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'length')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;
